# llama-index-practice

./: .gitignore  OllamaWrapper.py  get_router_query_engine.py  pyproject.toml
